# zscore

./: LICENSE  README.md  gitignore  pyproject.toml
src/zscore/: __init__.py  tb.py  utils_dirs.py  utils_evaluate.py  utils_process_trees.py  zscore.py
tests/: test_evaluate.py  test_utils_process_trees.py  tests_utils_dirs.py
